<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".presentation.pokemon.PokemonHostActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_pokemon_image"
                android:layout_width="@dimen/pokemon_detail_image"
                android:layout_height="@dimen/pokemon_detail_image"
                android:layout_marginTop="16dp"
                android:background="@drawable/rect_round"
                android:backgroundTint="@color/transparent_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_pest_control_rodent_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pokemon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_pokemon_image"
                tools:text="Ditto" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pokemon_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_name"
                app:layout_constraintStart_toEndOf="@+id/tv_pokemon_name"
                app:layout_constraintTop_toTopOf="@+id/tv_pokemon_name"
                tools:text="(1)" />

            <TextView
                android:id="@+id/tv_pokemon_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_name"
                tools:text="@string/txt_pokemon_height" />

            <TextView
                android:id="@+id/tv_pokemon_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_height"
                tools:text="@string/txt_pokemon_weight" />

            <TextView
                android:id="@+id/tv_pokemon_stats_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/txt_status"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_weight" />

            <include
                android:id="@+id/v_divider"
                layout="@layout/view_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_pokemon_stats_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pokemon_stat_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/v_divider"
                app:spanCount="2"
                tools:layout_editor_absoluteX="0dp"
                tools:listitem="@layout/item_pokemon_stat" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_capture"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_capture"
                app:layout_constraintTop_toBottomOf="@id/rv_pokemon_stat_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/view_loading"
        layout="@layout/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <include
        android:id="@+id/view_error"
        layout="@layout/view_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>